# rime

./: .dockerignore  Cargo.toml  README.md
deploy/pir-server/: Dockerfile  docker-compose.yml
rime-cli/: Cargo.toml
rime-cli/src/: main.rs
rime-core/: Cargo.toml
rime-core/src/: error.rs  keys.rs  lib.rs  notes.rs  privacy.rs  storage.rs  tree.rs  types.rs  ua.rs  wallet.rs
rime-lightclient/: Cargo.toml  build.rs
rime-lightclient/proto/: service.proto
rime-lightclient/src/: db.rs  full_memo.rs  lib.rs  rpc.rs  source.rs  stateless.rs  sync.rs  tor.rs
rime-lightclient/test_vectors/: sapling_note_encryption.json
rime-lightclient/tests/: rpc_live.rs
rime-pir/: Cargo.toml
rime-pir-server/: Cargo.toml
rime-pir-server/src/: main.rs
rime-pir/src/: lib.rs
scripts/: setup_pir_servers.sh
