[package]
name = "rime-core"
version = "0.1.0"
edition = "2021"

[dependencies]
aes-gcm = { workspace = true }
argon2 = { workspace = true }
bech32 = { workspace = true }
bip0039 = { workspace = true }
blake2b_simd = { workspace = true }
ed25519-dalek = { workspace = true }
rand = { workspace = true }
sapling = { workspace = true }
zip32 = { workspace = true }
hex = { workspace = true }
rusqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
zcash_primitives = { workspace = true }
zeroize = { workspace = true }
subtle = { workspace = true }
bincode = "1"
incrementalmerkletree = { workspace = true }
bls12_381 = { workspace = true }
lazy_static = { workspace = true }
jubjub = { workspace = true }
orchard = { workspace = true }
zcash_address = { workspace = true }
zcash_protocol = { workspace = true }

[dev-dependencies]
tempfile = "3"
