[package]
name = "rime-lightclient"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { workspace = true }
rime-core = { path = "../rime-core" }
rime-pir = { path = "../rime-pir" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tonic = { version = "0.10", features = ["tls", "tls-roots"] }
prost = "0.12"
prost-types = "0.12"
futures = "0.3"
async-trait = "0.1"
tracing = { workspace = true }
arti-client = { workspace = true }
tor-rtcompat = { workspace = true }
tokio-util = { workspace = true }
tower = { workspace = true }
hyper = { workspace = true }
hyper-util = { workspace = true }
http-body-util = "0.1"

zcash_client_backend = { version = "0.21", default-features = false, features = ["sync", "lightwalletd-tonic-transport"] }
zcash_client_sqlite = { version = "0.19", default-features = false }
zcash_protocol = "0.7"
zcash_keys = "0.12"
zcash_address = "0.10"
zcash_note_encryption = "0.4"
zcash_primitives = "0.26.1"
rusqlite = { workspace = true }
rand = { workspace = true }
sapling = { workspace = true }
hex = { workspace = true }
jubjub = { workspace = true }
ff = { workspace = true }
orchard = { workspace = true }
incrementalmerkletree = { workspace = true }
equihash = { workspace = true }
num-bigint = { workspace = true }
num-traits = { workspace = true }

[build-dependencies]
tonic-build = "0.10"

[dev-dependencies]
tempfile = "3"
jubjub = "0.10"
ff = "0.13"
redjubjub = "0.8"
