[package]
name = "rime-pir"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = { workspace = true }
bitvec = { workspace = true }
bincode = { workspace = true }
rand = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
